k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ameen2607-dev
spec:
  selector:
    app: node-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
