k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-route
  namespace: ameen2607-dev
spec:
  to:
    kind: Service
    name: my-service
  port:
    targetPort: 3000
  tls:
    termination: edge
